TEST_PROGRAMS/INVALID/Olivier_Melancon/declare_everywhere.min
var f: float;

f = 1.02;

print "We might need more stuff."

var i: int;

i = 0;

print "Why you no work!"
